# datakit-filter

./: .editorconfig  Cargo.toml  README.md  datakit.meta.json
.github/actions/setup/: action.yml
.github/workflows/: release.yml  test.yml
datakit-filter/: Cargo.toml
datakit-filter/src/: config.rs  data.rs  debug.rs  dependency_graph.rs  filter.rs  nodes.rs
datakit-filter/src/nodes/: call.rs  jq.rs  response.rs  template.rs
docs/: datakit.md
src/: config.rs  data.rs  dependency_graph.rs  filter.rs  nodes.rs
src/nodes/: call.rs  jq.rs  response.rs  template.rs
test/: demo.sh
test/config/: demo.yml
