[package]
name = "datakit"
version = "0.1.0"
authors = ["Hisham Muhammad <hisham@gobolinux.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde-json-wasm = "0.5.0"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
"url" = "2.5.0"
handlebars = "5.1.0"
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
jaq-core = "1.2.1"
jaq-std = "1.2.1"
